--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Fun Decode the Sentence Puzzle Game" />
-    <title>Decode the Sentence Puzzle</title>
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-  </head>
-  <body>
-    <div id="root"></div>
-    <!-- AdSense will go here later -->
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Fun Decode the Sentence Puzzle Game" />
+  <title>Decode the Sentence Puzzle</title>
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5158994576624872"
+    crossorigin="anonymous"></script>
+
+</head>
+
+<body>
+  <div id="root"></div>
+  <!-- AdSense will go here later -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5158994576624872"
+    crossorigin="anonymous"></script>
+  <!-- Bottom -->
+  <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-5158994576624872" data-ad-slot="2568066009"
+    data-ad-format="auto" data-full-width-responsive="true"></ins>
+  <script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+  </script>
+</body>
+
 </html>
