--- a/public/index.html
+++ b/public/index.html
@@ -15,17 +15,18 @@
   <style>
     body {
       margin: 0;
+      background: #f7f7f7;
       display: flex;
       justify-content: center;
-      background: #f7f7f7;
     }
 
     /* React App Container */
     #root {
-      margin: 0 160px;
-      /* room for the smaller ads */
       max-width: 900px;
       width: 100%;
+      padding: 0 20px;
+      /* smaller padding instead of huge margins */
+      box-sizing: border-box;
     }
 
     /* Left + Right Ads */
@@ -59,18 +60,30 @@
       z-index: 999;
       border-top: 1px solid #ddd;
     }
+
+    /* Responsive: hide side ads on smaller screens */
+    @media (max-width: 1024px) {
+      #root {
+        padding: 0 10px;
+      }
+
+      #left-ad,
+      #right-ad {
+        display: none;
+      }
+    }
   </style>
 </head>
 
 <body>
 
-  <!-- Left Ad (smaller) -->
+  <!-- Left Ad -->
   <div id="left-ad">
     <ins class="adsbygoogle" style="display:inline-block;width:120px;height:240px"
       data-ad-client="ca-pub-5158994576624872" data-ad-slot="8558759286"></ins>
   </div>
 
-  <!-- Right Ad (smaller) -->
+  <!-- Right Ad -->
   <div id="right-ad">
     <ins class="adsbygoogle" style="display:inline-block;width:120px;height:240px"
       data-ad-client="ca-pub-5158994576624872" data-ad-slot="6081711709"></ins>
@@ -85,7 +98,7 @@
       data-ad-format="auto" data-full-width-responsive="true"></ins>
   </div>
 
-  <!-- Push all ads for rendering -->
+  <!-- Push all ads -->
   <script>
     (adsbygoogle = window.adsbygoogle || []).push({});
     (adsbygoogle = window.adsbygoogle || []).push({});
