--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,17 @@
   <meta name="description" content="Fun Decode the Sentence Puzzle Game" />
   <title>Decode the Sentence Puzzle</title>
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600&display=swap"
+    rel="stylesheet">
 
-  <!-- Load AdSense once for Auto Ads -->
+  <!-- Auto Ads script (do not touch) -->
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5158994576624872"
     crossorigin="anonymous"></script>
 
   <style>
-    /* Full-page React app */
     html,
     body {
       margin: 0;
@@ -28,21 +32,22 @@
       box-sizing: border-box;
     }
 
-    /* Left + Right Ads overlay (240x480) */
+    /* Side ads 240x480 */
     #left-ad,
     #right-ad {
       position: fixed;
       top: 50%;
       transform: translateY(-50%);
-      width: 240px;
-      height: 480px;
+      width: 160px;
+      height: 360px;
       z-index: 999;
-      background: #fff;
-      border-radius: 8px;
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
       display: flex;
       align-items: center;
       justify-content: center;
+      background: white;
+      border-radius: 8px;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
+      padding: 4px;
     }
 
     #left-ad {
@@ -53,33 +58,12 @@
       right: 20px;
     }
 
-    /* Bottom banner overlay (728x90) */
-    #bottom-ad {
-      position: fixed;
-      bottom: 20px;
-      left: 50%;
-      transform: translateX(-50%);
-      width: 728px;
-      height: 90px;
-      text-align: center;
-      background: rgba(255, 255, 255, 0.95);
-      border-radius: 6px;
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-
     /* Responsive: hide side ads on smaller screens */
-    @media (max-width: 1280px) {
+    @media (max-width: 960px) {
 
       #left-ad,
       #right-ad {
         display: none;
-      }
-
-      #bottom-ad {
-        width: 90%;
       }
     }
   </style>
@@ -89,37 +73,31 @@
 
   <!-- Left Ad -->
   <div id="left-ad">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5158994576624872"
-      crossorigin="anonymous"></script>
-    <!-- Leftside -->
-    <ins class="adsbygoogle" style="display:inline-block;width:240px;height:480px"
+    <ins class="adsbygoogle" style="display:inline-block;width:160px;height:360px"
       data-ad-client="ca-pub-5158994576624872" data-ad-slot="8558759286"></ins>
   </div>
 
   <!-- Right Ad -->
   <div id="right-ad">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5158994576624872"
-      crossorigin="anonymous"></script>
-    <!-- Rightside -->
-    <ins class="adsbygoogle" style="display:inline-block;width:240px;height:480px"
+    <ins class="adsbygoogle" style="display:inline-block;width:160px;height:360px"
       data-ad-client="ca-pub-5158994576624872" data-ad-slot="6081711709"></ins>
   </div>
 
   <!-- Root React App -->
   <div id="root"></div>
 
-  <!-- Bottom Banner Ad -->
-  <div id="bottom-ad">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5158994576624872"
-      crossorigin="anonymous"></script>
-    <!-- Bottom -->
-    <ins class="adsbygoogle" style="display:inline-block;width:728px;height:90px"
-      data-ad-client="ca-pub-5158994576624872" data-ad-slot="2568066009"></ins>
-  </div>
-
-  <!-- Render all ads at once -->
+  <!-- Render all fixed ad units after the page loads -->
   <script>
-    (adsbygoogle = window.adsbygoogle || []).push({});
+    window.addEventListener('load', function () {
+      // Render left ad
+      const left = document.querySelector('#left-ad .adsbygoogle');
+      if (left) (adsbygoogle = window.adsbygoogle || []).push({});
+
+      // Render right ad
+      const right = document.querySelector('#right-ad .adsbygoogle');
+      if (right) (adsbygoogle = window.adsbygoogle || []).push({});
+
+    });
   </script>
 
 </body>
