--- a/public/index.html
+++ b/public/index.html
@@ -44,9 +44,9 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      background: white;
+      background: transparent;
       border-radius: 8px;
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
+      box-shadow: none;
       padding: 4px;
     }
 
