--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Fun Decode the Sentence Puzzle Game" />
-  <title>Decode the Sentence Puzzle</title>
+  <meta name="description" content="Almost - Get it exactly right, or you lose. A challenging number guessing game." />
+  <title>Almost</title>
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
